# python

./: .gitignore  README.md  backup_pip.sh  fresh_tomatoes.html  pipenv.txt  primeNumber.py  requirements.txt  snakeGame.py
Jupyter/: Learning.ipynb
algorithms/: README.md  bitwise_compression.py  fibonacci.py
cli_apps/: README.md  discord-bot.py  imageRecognition.py  manhwa.py  scrapper.py
deep_learning/: 001_and_perceptron.py  005_cross_entropy.py
django/: README.md
django/blog/: Pipfile  README.md
flask/: README.md  app.py  database.db  schema.sql
flask_saas/: .coverage  README.md  pyproject.toml
flask_saas/config/: settings.py
flask_saas/saas/: app.py
flask_saas/saas/blueprints/page/: __init__.py
flask_saas/saas/blueprints/page/templates/page/: home.html  privacy.html  terms.html
flask_saas/saas/templates/layouts/: base.html
flask_saas/tests/: conftest.py
games/: snakeGame.py
jupyter/: README.md
learning_python/: 001_Introduction.md  002_Data_Types.md  003_Functions_and_Modules.md  004_Web_Apps.md  005_File_IO.md  006_Databases.md  007_Classes_Context_Management.md  008_Decorators.md  009_Exceptions.md  010_Threading.md  011_Comprehension_Generators.md  012_Testing.md  01_attribute_lookup.py  02_utf_8_integer_division.py  03_heapq_lexicographically.py  04_private_protected.py  05_closure_lambda.py  06_modify_attribute_lookup.py  07_short_circuit.py  08_mutate_rebind.py  09_mutable_default_arguments.py  README.md
scripts/: README.md  github.py  manhwa.py  nyaa.py  primeNumber.py  scrap_page.py  scrapper.py  spreadsheet.py  tsuki-bot.py
(+216 files in other folders)
